// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render User Should render User with false isAuth 1`] = `
<li
  className="header__nav-item user"
>
  <a
    className="header__nav-link header__nav-link--profile"
    href="#"
  >
    <div
      className="header__avatar-wrapper user__avatar-wrapper"
    />
    <span
      className="header__login"
    >
      Sign in
    </span>
  </a>
</li>
`;

exports[`Should render User Should render User with true isAuth 1`] = `
<li
  className="header__nav-item user"
>
  <a
    className="header__nav-link header__nav-link--profile"
    href="#"
  >
    <div
      className="header__avatar-wrapper user__avatar-wrapper"
    />
    <span
      className="header__user-name user__name"
    >
      email
    </span>
  </a>
</li>
`;
